--- a/src/app/features/shared-components/login/login.component.css
+++ b/src/app/features/shared-components/login/login.component.css
@@ -65,3 +65,67 @@ mat-card {
   font-size: 14px;
   color: black;
 }
+
+.tooltip:before {
+  background: #ffabab;
+  background: rgb(223, 11, 11);
+  background: rgba(243, 96, 96, 0.678); /* Black background with 0.5 opacity */
+  border-radius: 6px;
+  display: block;
+  padding: 5px;
+  padding-right: 25px;
+  position: absolute;    
+  width: 280px;
+  z-index: 1;
+  content: attr(title);
+  height: 34px;
+  margin-left: -300px;
+  animation: 2s slidein;
+}
+
+.tooltip_login:hover::after, .tooltip_password:hover::after {
+  background: rgb(2, 2, 2);
+  background: rgba(241, 240, 240, 0.521); /* Black background with 0.5 opacity */
+  border-radius: 6px;
+  bottom: -6x;
+  display: block;
+  padding: 5px;
+  position: absolute;    
+  z-index: 1;
+  left:94%;
+}
+
+.tooltip_password:hover::after {
+  content: "Length: 8-25 | min: 1 - [!@#$ ...] and 1 - [0-9] and 1 - [a-z] and 1 - [A-Z]";
+  width: 490px;
+}
+
+.tooltip_login:hover::after {
+  content: "Length:4 - 20 | min: 1 - [a-z] and 1 - [A-Z] and optional [0-9]";
+  width: 420px;
+}
+
+@keyframes slidein {
+  0% {
+      top: -220px;opacity: 0.1;
+  }
+  20% {
+      top: 177px;opacity: 0.3;
+  }
+  30%{
+    top:180px ;opacity: 0.5;
+  }
+
+  70%{
+    opacity: 0.6;
+  }
+
+  90%{
+   opacity: 0.8;
+  }
+
+  100% {
+      top:239px;
+      opacity: 1;
+  }
+}
