--- a/src/app/features/pollster-panel/components/inquiry-table-list/inquiry-table-list.component.html
+++ b/src/app/features/pollster-panel/components/inquiry-table-list/inquiry-table-list.component.html
@@ -19,9 +19,9 @@
       <th mat-header-cell *matHeaderCellDef>Action</th>
       <td mat-cell *matCellDef="let element">
         <div class="tableAction">
-          <button class="button" color="basic" mat-raised-button (click)="editInquiry(element.id)" [disabled]="sessionStorageUser === accountsToken.USER_TOKEN">Edit</button>
+          <button class="button" color="basic" mat-raised-button (click)="editInquiry(element.id)" [disabled]="">Edit</button>
           <button class="button" color="accent" mat-raised-button >View scores</button>
-          <button class="button" color="warn" mat-raised-button (click)="deleteInquiry(element.id, element.name)" [disabled]="sessionStorageUser === accountsToken.USER_TOKEN">Delete</button>
+          <button class="button" color="warn" mat-raised-button (click)="deleteInquiry(element.id, element.name)" [disabled]="">Delete</button>
         </div>
       </td>
     </ng-container>
