--- a/src/app/features/pollster-panel/containers/pollster-panel/pollster-panel-container.component.html
+++ b/src/app/features/pollster-panel/containers/pollster-panel/pollster-panel-container.component.html
@@ -1,38 +1,1 @@
-
-  <div class="container">
-    <div class="setButtons">
-      <button class="button-63" (click)="openSaveInquiryForm()"><mat-icon fontIcon="add"></mat-icon>&nbsp;Add inquiry</button>
-      <mat-card class="setMatCartContent">
-        <div class="setMat">
-          <div class="setUserInfo">
-            <div>
-              <div class="title">Your profile info</div>
-              <div><span>Inquiries to accomplish:</span></div>
-              <div>
-                <span>Failed: {{ 'o' }} within last 1 months</span>
-              </div>
-              <div>
-                <span>Your local time: {{ timeActual }}</span>
-              </div>
-            </div>
-          </div>
-
-          <div class="setImageRow">
-            <div class="cardImage"></div>
-            <p class="setImageRowText">{{ userType }}</p>
-          </div>
-        </div>
-      </mat-card>
-
-      <button class="button-63" (click)="logOut()"><mat-icon fontIcon="logout"></mat-icon>&nbsp;Log out</button>
-    </div>
-
-    <div>
-      <inq-inquiry-table-list-pollster
-        (editInquiryEvent)="openEditInquiryForm($event)"
-        (fillInquiryEvent)="openSaveInquiryForm()"
-        (deleteInquiryEvent)="showDeleteToastr($event)"
-      ></inq-inquiry-table-list-pollster>
-    </div>
-  </div>
-
+<div class="w-full h-full p-10" ><inq-inquiries></inq-inquiries></div>
