--- a/src/app/features/sidebar/sidebar.component.html
+++ b/src/app/features/sidebar/sidebar.component.html
@@ -61,7 +61,7 @@
       >
         <div class="flex flex-row items-center gap-2 h-6 pt-1">
           <img src="../assets/images/questionnaire.svg" width="22" height="25" class="" alt="" />
-          <span class="font-normal text-sm w-full">Inquires</span>
+          <span class="font-normal text-sm w-full">Inquiries</span>
         </div>
 
         <svg
