--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,19 +1,12 @@
-.container {
+.sidebar_container {
     height: 100%;
-    width: 100%;
-    background-color: #dee2e6;
-}
-
-.bodyRoot {
+    background: rgb(255, 255, 255);
+    background: linear-gradient(275deg, rgba(255, 255, 255, 1) 19%, rgba(222, 226, 230, 1) 73%);
     width: 100%;
 }
 
-.sidebar {
-    z-index: -1;
-}
-
-.main-conten {
-    width: 100%;
+.side_container {
+    width: 100px;
 }
 
 .sidebar_show {
@@ -26,8 +19,9 @@
 
 .sidebar_hide {
     height: 100%;
-    animation: slideout 2s reverse;
+    animation: slidein 2s reverse;
     margin-left: -260px;
+    z-index: 1;
 }
 
 @keyframes slidein {
@@ -38,7 +32,7 @@
         margin-left: -300px;
     }
 
-    30%{
+    30% {
         margin-left: -250px;
     }
 
@@ -55,7 +49,7 @@
         margin-left: -300px;
     }
 
-    30%{
+    30% {
         margin-left: -250px;
     }
 
@@ -64,23 +58,28 @@
     }
 }
 
-.hiddenn {
-    visibility: hidden;
-}
-
-.sidebar_container {
-    height: 100%;
-   background: rgb(255,255,255);
-    background: linear-gradient(275deg, rgba(255,255,255,1) 19%, rgba(222,226,230,1) 73%);;
+.widthContainer {
     width: 100%;
+    z-index: 0;
+    animation: slidePollsterPanel 2s normal;
+    margin-left: 50px;
 }
 
-.container{
-    overflow: hidden;
+.widthContainer2 {
     width: 100%;
-    height: 100%;
+    margin-left: 200px;
 }
 
-.side_container{
-    width:200px
+@keyframes slidePollsterPanel {
+    0% {
+        margin-left: 200px;
+    }
+
+    45% {
+        margin-left: 200px;
+    }
+
+    100% {
+        margin-left: 50px;
+    }
 }
