--- a/src/app/features/inquiry-header/inquiry-header.component.html
+++ b/src/app/features/inquiry-header/inquiry-header.component.html
@@ -12,7 +12,7 @@
         style="border-radius: 5px; cursor: pointer; padding-top: 3px"
       />
       <img
-        src="../assets/images/inquiry app text.svg"
+        src="../assets/images/4.svg"
         width="120"
         height="60"
         class=""
