--- a/src/app/features/pollster-panel/containers/pollster-panel/pollster-panel-container.component.css
+++ b/src/app/features/pollster-panel/containers/pollster-panel/pollster-panel-container.component.css
@@ -137,3 +137,11 @@
     font-family: 600;
   }
 }
+
+
+.box1{
+  border-color: #c7c7c7;
+  border-style: solid;
+  text-align: end;
+  align-items: first baseline;
+}
