--- a/src/app/features/pollster-panel/containers/pollster-panel/pollster-panel-container.component.html
+++ b/src/app/features/pollster-panel/containers/pollster-panel/pollster-panel-container.component.html
@@ -1,1 +1,5 @@
-<div class="w-full h-full p-10" ><inq-inquiries></inq-inquiries></div>
+<div class="w-full h-full p-5" >
+<div class="border-t-0 border-r-0 border-l-0 border box1"><img src="../assets/images/2.svg" width="350" height="250" class="" alt="" /></div>
+    <!-- <div class="text-2xl"><span>Main pollster panel</span></div> -->
+    <div class="pt-5 h-full"><inq-inquiries></inq-inquiries></div></div>
+    
