--- a/src/app/features/pollster-panel/components/inquiries/inquiries.component.css
+++ b/src/app/features/pollster-panel/components/inquiries/inquiries.component.css
@@ -5,9 +5,9 @@
     color: white;
     background: linear-gradient(
     90deg,
-    #3d3d3d 50%,
+    #e9e9e9 50%,
     rgb(177, 177, 177) 10%,
-    #f3f3f3 0%
+    #ffffff 0%
   );
   box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 5px 0px, rgba(0, 0, 0, 0.1) 0px 0px 1px 0px;
 }
