--- a/src/app/features/pollster-panel/components/charts/charts.component.css
+++ b/src/app/features/pollster-panel/components/charts/charts.component.css
@@ -11,7 +11,7 @@
     color: white;
     background: linear-gradient(
     90deg,
-    #a1a1a1 50%,
+    #535353 50%,
     rgb(177, 177, 177) 10%,
     #ffffff 0%
   );
