--- a/src/app/features/pollster-panel/containers/pollster-panel/pollster-panel-container.component.html
+++ b/src/app/features/pollster-panel/containers/pollster-panel/pollster-panel-container.component.html
@@ -2,7 +2,7 @@
   <div class="border-t-0 border-r-0 border-l-0 border box1">
     <img src="../assets/images/pollster-panel/pollster-panel-name.svg" width="350" height="250" class="" alt="" />
   </div>
-  <div class="flex flex-row pt-4 w-1/2 justify-between">
-    <inq-tables class="w-1/5 h-full"> </inq-tables><inq-inquiries class="w-1/5 h-full"></inq-inquiries>
+  <div class="flex flex-row pt-4 w-4/6 justify-between">
+   <inq-inquiries class="w-1/5 h-full"></inq-inquiries><inq-tables class="w-1/5 h-full"> </inq-tables><inq-charts class="w-1/5 h-full"> </inq-charts>
   </div>
 </div>
