--- a/src/app/features/inquiry-header/inquiry-header.component.html
+++ b/src/app/features/inquiry-header/inquiry-header.component.html
@@ -44,6 +44,7 @@
         class=""
         alt=""
         style="border-radius: 5px; cursor: pointer; padding-top: 3px"
+        (click)="login()"
       />
     </div>
   </div>
