--- a/src/app/features/shared-components/login/login.component.html
+++ b/src/app/features/shared-components/login/login.component.html
@@ -1,9 +1,9 @@
-<div class="flex justify-center">
+<div class="w-full">
   <mat-card class="mt-28">
     <div class="flex justify-center pt-10">
-      <img src="../assets/images/sign-in2.svg" width="150" height="60" class="" alt="" />
+      <img src="../assets/images/sin-in-user.svg" width="80" height="80" class="" alt="" />
     </div>
-    <div><span class="flex justify-center text-2xl text-gray-400 font-extralight">Sign in</span></div>
+    <div><span class="flex justify-center text-2xl text-gray-200 font-extralight">Sign in</span></div>
 
     <div class="flex flex-row justify-center">
       <form [formGroup]="loginForm" class="w-full max-w-sm flex flex-row justify-center">
@@ -52,7 +52,7 @@
     </div>
     <div class="justify-center flex flex-row items-center mt-4">
       <div class="flex items-center">
-        <span class="flex justify-center text-sm text-gray-400 font-extralight">Don't have an account yet?</span>
+        <span class="flex justify-center text-sm text-gray-300 font-extralight">Don't have an account yet?</span>
       </div>
       <div class="cursor-pointer w-16 flex items-center justify-center" (click)="navigateToRegister()">
         <span class="text-gray-400 text-sm font-extralight hover:text-gray-600 hover:font-medium flex items-center"
