--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -83,3 +83,12 @@
         margin-left: 50px;
     }
 }
+
+
+.widthContainer3 {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    z-index: 1;
+}
