--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<header><inq-inquiry-header (openSidebar)="getSidenavEvent($event)"></inq-inquiry-header></header>
+<header><inq-inquiry-header (openSidebar)="getSidenavEvent($event)" (isLogin)="login($event)"></inq-inquiry-header></header>
 
 <section class="sidebar_container flex">
   <div class="flex flex-row">
@@ -11,5 +11,5 @@
       }
     </div>
   </div>
-  <div [ngClass]="{ widthContainer: !isSidebar, widthContainer2:isSidebar}"><router-outlet></router-outlet></div>
+  <div [ngClass]="{ widthContainer: !isSidebar && !isLogin, widthContainer2:isSidebar  && !isLogin, widthContainer3:isLogin || isRegister}"><router-outlet></router-outlet></div>
 </section>
