--- a/src/app/features/shared-components/login/login.component.css
+++ b/src/app/features/shared-components/login/login.component.css
@@ -1,28 +1,21 @@
 @import url("https://fonts.googleapis.com/icon?family=Material+Icons");
 @import url("https://fonts.googleapis.com/css?family=Open+Sans:400,600,300");
 
-.x {
-  width: 100%;
+.boxes{
+  margin-left: 0%;
 }
 
 mat-card {
-  width: 20%;
+  width: 320px;
   height: 400px;
   background: rgb(255, 255, 255);
   border-radius: 15px;
-  background: linear-gradient(
-    312deg,
-    rgba(255, 255, 255, 1) 8%,
-    rgba(238, 238, 241, 1) 17%,
-    rgba(217, 217, 220, 1) 75%
-  );
-  box-shadow: rgba(17, 17, 26, 0.1) 0px 0px 16px;
+  background-color: rgb(70, 70, 70);
+  box-shadow: rgba(136, 136, 136, 0.561) 0px 10px 60px 20px;
 }
 .settingPageCard {
   width: 450px;
   height: 600px;
-  /* box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px; */
-  /* box-shadow: #DEE2E6 0px 0px 4px 4px; */
 }
 
 .hightDiv {
